src/generated/RobotDSLParser.py
# Generated from D:/4041/compiler/DSL_Robo_project/grammar/RobotDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RobotDSLParser ( Parser ):

    grammarFileName = "RobotDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'robot'", "'sensors'", "'sensor'", "'actuators'", 
                     "'actuator'", "'vars'", "'var'", "'behavior'", "'initial'", 
                     "'state'", "'enter_on'", "'update_on'", "'exit_on'", 
                     "'if'", "'goto'", "'bool'", "'int'", "'float'", "'string'", 
                     "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "';'", "':'", 
                     "','", "'.'" ]

    symbolicNames = [ "<INVALID>", "ROBOT", "SENSORS", "SENSOR", "ACTUATORS", 
                      "ACTUATOR", "VARS", "VAR", "BEHAVIOR", "INITIAL", 
                      "STATE", "ENTER_ON", "UPDATE_ON", "EXIT_ON", "IF", 
                      "GOTO", "BOOL", "INT", "FLOAT", "STRING", "EQ", "NEQ", 
                      "LE", "GE", "LT", "GT", "ASSIGN", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "AND", "OR", "NOT", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "SEMI", "COLON", "COMMA", 
                      "DOT", "BOOL_LIT", "FLOAT_LIT", "INT_LIT", "STRING_LIT", 
                      "ID", "WS", "LINE_COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_robotDecl = 1
    RULE_robotBody = 2
    RULE_sensorsBlock = 3
    RULE_sensorDecl = 4
    RULE_actuatorsBlock = 5
    RULE_actuatorDecl = 6
    RULE_varsBlock = 7
    RULE_varDecl = 8
    RULE_behaviorDecl = 9
    RULE_initialDecl = 10
    RULE_stateDecl = 11
    RULE_stateBody = 12
    RULE_enterBlock = 13
    RULE_updateBlock = 14
    RULE_exitBlock = 15
    RULE_block = 16
    RULE_stmt = 17
    RULE_transitionStmt = 18
    RULE_assignStmt = 19
    RULE_actionStmt = 20
    RULE_argList = 21
    RULE_expr = 22
    RULE_logicOr = 23
    RULE_logicAnd = 24
    RULE_equality = 25
    RULE_comparison = 26
    RULE_addition = 27
    RULE_multiplication = 28
    RULE_unary = 29
    RULE_primary = 30
    RULE_literal = 31
    RULE_dataType = 32

    ruleNames =  [ "program", "robotDecl", "robotBody", "sensorsBlock", 
                   "sensorDecl", "actuatorsBlock", "actuatorDecl", "varsBlock", 
                   "varDecl", "behaviorDecl", "initialDecl", "stateDecl", 
                   "stateBody", "enterBlock", "updateBlock", "exitBlock", 
                   "block", "stmt", "transitionStmt", "assignStmt", "actionStmt", 
                   "argList", "expr", "logicOr", "logicAnd", "equality", 
                   "comparison", "addition", "multiplication", "unary", 
                   "primary", "literal", "dataType" ]

    EOF = Token.EOF
    ROBOT=1
    SENSORS=2
    SENSOR=3
    ACTUATORS=4
    ACTUATOR=5
    VARS=6
    VAR=7
    BEHAVIOR=8
    INITIAL=9
    STATE=10
    ENTER_ON=11
    UPDATE_ON=12
    EXIT_ON=13
    IF=14
    GOTO=15
    BOOL=16
    INT=17
    FLOAT=18
    STRING=19
    EQ=20
    NEQ=21
    LE=22
    GE=23
    LT=24
    GT=25
    ASSIGN=26
    PLUS=27
    MINUS=28
    MUL=29
    DIV=30
    MOD=31
    AND=32
    OR=33
    NOT=34
    LPAREN=35
    RPAREN=36
    LBRACE=37
    RBRACE=38
    SEMI=39
    COLON=40
    COMMA=41
    DOT=42
    BOOL_LIT=43
    FLOAT_LIT=44
    INT_LIT=45
    STRING_LIT=46
    ID=47
    WS=48
    LINE_COMMENT=49
    BLOCK_COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def robotDecl(self):
            return self.getTypedRuleContext(RobotDSLParser.RobotDeclContext,0)


        def EOF(self):
            return self.getToken(RobotDSLParser.EOF, 0)

        def getRuleIndex(self):
            return RobotDSLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = RobotDSLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.robotDecl()
            self.state = 67
            self.match(RobotDSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RobotDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROBOT(self):
            return self.getToken(RobotDSLParser.ROBOT, 0)

        def ID(self):
            return self.getToken(RobotDSLParser.ID, 0)

        def LBRACE(self):
            return self.getToken(RobotDSLParser.LBRACE, 0)

        def robotBody(self):
            return self.getTypedRuleContext(RobotDSLParser.RobotBodyContext,0)


        def RBRACE(self):
            return self.getToken(RobotDSLParser.RBRACE, 0)

        def getRuleIndex(self):
            return RobotDSLParser.RULE_robotDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRobotDecl" ):
                listener.enterRobotDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRobotDecl" ):
                listener.exitRobotDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRobotDecl" ):
                return visitor.visitRobotDecl(self)
            else:
                return visitor.visitChildren(self)




    def robotDecl(self):

        localctx = RobotDSLParser.RobotDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_robotDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(RobotDSLParser.ROBOT)
            self.state = 70
            self.match(RobotDSLParser.ID)
            self.state = 71
            self.match(RobotDSLParser.LBRACE)
            self.state = 72
            self.robotBody()
            self.state = 73
            self.match(RobotDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RobotBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sensorsBlock(self):
            return self.getTypedRuleContext(RobotDSLParser.SensorsBlockContext,0)


        def actuatorsBlock(self):
            return self.getTypedRuleContext(RobotDSLParser.ActuatorsBlockContext,0)


        def varsBlock(self):
            return self.getTypedRuleContext(RobotDSLParser.VarsBlockContext,0)


        def behaviorDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotDSLParser.BehaviorDeclContext)
            else:
                return self.getTypedRuleContext(RobotDSLParser.BehaviorDeclContext,i)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_robotBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRobotBody" ):
                listener.enterRobotBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRobotBody" ):
                listener.exitRobotBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRobotBody" ):
                return visitor.visitRobotBody(self)
            else:
                return visitor.visitChildren(self)




    def robotBody(self):

        localctx = RobotDSLParser.RobotBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_robotBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 75
                self.sensorsBlock()


            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 78
                self.actuatorsBlock()


            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 81
                self.varsBlock()


            self.state = 85 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 84
                self.behaviorDecl()
                self.state = 87 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SensorsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SENSORS(self):
            return self.getToken(RobotDSLParser.SENSORS, 0)

        def LBRACE(self):
            return self.getToken(RobotDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RobotDSLParser.RBRACE, 0)

        def sensorDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotDSLParser.SensorDeclContext)
            else:
                return self.getTypedRuleContext(RobotDSLParser.SensorDeclContext,i)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_sensorsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSensorsBlock" ):
                listener.enterSensorsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSensorsBlock" ):
                listener.exitSensorsBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSensorsBlock" ):
                return visitor.visitSensorsBlock(self)
            else:
                return visitor.visitChildren(self)




    def sensorsBlock(self):

        localctx = RobotDSLParser.SensorsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sensorsBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(RobotDSLParser.SENSORS)
            self.state = 90
            self.match(RobotDSLParser.LBRACE)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 91
                self.sensorDecl()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.match(RobotDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SensorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SENSOR(self):
            return self.getToken(RobotDSLParser.SENSOR, 0)

        def ID(self):
            return self.getToken(RobotDSLParser.ID, 0)

        def COLON(self):
            return self.getToken(RobotDSLParser.COLON, 0)

        def dataType(self):
            return self.getTypedRuleContext(RobotDSLParser.DataTypeContext,0)


        def SEMI(self):
            return self.getToken(RobotDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return RobotDSLParser.RULE_sensorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSensorDecl" ):
                listener.enterSensorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSensorDecl" ):
                listener.exitSensorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSensorDecl" ):
                return visitor.visitSensorDecl(self)
            else:
                return visitor.visitChildren(self)




    def sensorDecl(self):

        localctx = RobotDSLParser.SensorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sensorDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(RobotDSLParser.SENSOR)
            self.state = 100
            self.match(RobotDSLParser.ID)
            self.state = 101
            self.match(RobotDSLParser.COLON)
            self.state = 102
            self.dataType()
            self.state = 103
            self.match(RobotDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActuatorsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTUATORS(self):
            return self.getToken(RobotDSLParser.ACTUATORS, 0)

        def LBRACE(self):
            return self.getToken(RobotDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RobotDSLParser.RBRACE, 0)

        def actuatorDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotDSLParser.ActuatorDeclContext)
            else:
                return self.getTypedRuleContext(RobotDSLParser.ActuatorDeclContext,i)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_actuatorsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActuatorsBlock" ):
                listener.enterActuatorsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActuatorsBlock" ):
                listener.exitActuatorsBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActuatorsBlock" ):
                return visitor.visitActuatorsBlock(self)
            else:
                return visitor.visitChildren(self)




    def actuatorsBlock(self):

        localctx = RobotDSLParser.ActuatorsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_actuatorsBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(RobotDSLParser.ACTUATORS)
            self.state = 106
            self.match(RobotDSLParser.LBRACE)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 107
                self.actuatorDecl()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(RobotDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActuatorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTUATOR(self):
            return self.getToken(RobotDSLParser.ACTUATOR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(RobotDSLParser.ID)
            else:
                return self.getToken(RobotDSLParser.ID, i)

        def COLON(self):
            return self.getToken(RobotDSLParser.COLON, 0)

        def SEMI(self):
            return self.getToken(RobotDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return RobotDSLParser.RULE_actuatorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActuatorDecl" ):
                listener.enterActuatorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActuatorDecl" ):
                listener.exitActuatorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActuatorDecl" ):
                return visitor.visitActuatorDecl(self)
            else:
                return visitor.visitChildren(self)




    def actuatorDecl(self):

        localctx = RobotDSLParser.ActuatorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actuatorDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(RobotDSLParser.ACTUATOR)
            self.state = 116
            self.match(RobotDSLParser.ID)
            self.state = 117
            self.match(RobotDSLParser.COLON)
            self.state = 118
            self.match(RobotDSLParser.ID)
            self.state = 119
            self.match(RobotDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(RobotDSLParser.VARS, 0)

        def LBRACE(self):
            return self.getToken(RobotDSLParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(RobotDSLParser.RBRACE, 0)

        def varDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotDSLParser.VarDeclContext)
            else:
                return self.getTypedRuleContext(RobotDSLParser.VarDeclContext,i)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_varsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarsBlock" ):
                listener.enterVarsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarsBlock" ):
                listener.exitVarsBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarsBlock" ):
                return visitor.visitVarsBlock(self)
            else:
                return visitor.visitChildren(self)




    def varsBlock(self):

        localctx = RobotDSLParser.VarsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varsBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(RobotDSLParser.VARS)
            self.state = 122
            self.match(RobotDSLParser.LBRACE)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 123
                self.varDecl()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(RobotDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(RobotDSLParser.VAR, 0)

        def ID(self):
            return self.getToken(RobotDSLParser.ID, 0)

        def COLON(self):
            return self.getToken(RobotDSLParser.COLON, 0)

        def dataType(self):
            return self.getTypedRuleContext(RobotDSLParser.DataTypeContext,0)


        def SEMI(self):
            return self.getToken(RobotDSLParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(RobotDSLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(RobotDSLParser.ExprContext,0)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = RobotDSLParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(RobotDSLParser.VAR)
            self.state = 132
            self.match(RobotDSLParser.ID)
            self.state = 133
            self.match(RobotDSLParser.COLON)
            self.state = 134
            self.dataType()
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 135
                self.match(RobotDSLParser.ASSIGN)
                self.state = 136
                self.expr()


            self.state = 139
            self.match(RobotDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BehaviorDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEHAVIOR(self):
            return self.getToken(RobotDSLParser.BEHAVIOR, 0)

        def ID(self):
            return self.getToken(RobotDSLParser.ID, 0)

        def LBRACE(self):
            return self.getToken(RobotDSLParser.LBRACE, 0)

        def initialDecl(self):
            return self.getTypedRuleContext(RobotDSLParser.InitialDeclContext,0)


        def RBRACE(self):
            return self.getToken(RobotDSLParser.RBRACE, 0)

        def stateDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RobotDSLParser.StateDeclContext)
            else:
                return self.getTypedRuleContext(RobotDSLParser.StateDeclContext,i)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_behaviorDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBehaviorDecl" ):
                listener.enterBehaviorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBehaviorDecl" ):
                listener.exitBehaviorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBehaviorDecl" ):
                return visitor.visitBehaviorDecl(self)
            else:
                return visitor.visitChildren(self)




    def behaviorDecl(self):

        localctx = RobotDSLParser.BehaviorDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_behaviorDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(RobotDSLParser.BEHAVIOR)
            self.state = 142
            self.match(RobotDSLParser.ID)
            self.state = 143
            self.match(RobotDSLParser.LBRACE)
            self.state = 144
            self.initialDecl()
            self.state = 146 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 145
                self.stateDecl()
                self.state = 148 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

            self.state = 150
            self.match(RobotDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INITIAL(self):
            return self.getToken(RobotDSLParser.INITIAL, 0)

        def ID(self):
            return self.getToken(RobotDSLParser.ID, 0)

        def SEMI(self):
            return self.getToken(RobotDSLParser.SEMI, 0)

        def getRuleIndex(self):
            return RobotDSLParser.RULE_initialDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitialDecl" ):
                listener.enterInitialDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitialDecl" ):
                listener.exitInitialDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialDecl" ):
                return visitor.visitInitialDecl(self)
            else:
                return visitor.visitChildren(self)




    def initialDecl(self):

        localctx = RobotDSLParser.InitialDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initialDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(RobotDSLParser.INITIAL)
            self.state = 153
            self.match(RobotDSLParser.ID)
            self.state = 154
            self.match(RobotDSLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STATE(self):
            return self.getToken(RobotDSLParser.STATE, 0)

        def ID(self):
            return self.getToken(RobotDSLParser.ID, 0)

        def LBRACE(self):
            return self.getToken(RobotDSLParser.LBRACE, 0)

        def stateBody(self):
            return self.getTypedRuleContext(RobotDSLParser.StateBodyContext,0)


        def RBRACE(self):
            return self.getToken(RobotDSLParser.RBRACE, 0)

        def getRuleIndex(self):
            return RobotDSLParser.RULE_stateDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateDecl" ):
                listener.enterStateDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateDecl" ):
                listener.exitStateDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStateDecl" ):
                return visitor.visitStateDecl(self)
            else:
                return visitor.visitChildren(self)




    def stateDecl(self):

        localctx = RobotDSLParser.StateDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_stateDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(RobotDSLParser.STATE)
            self.state = 157
            self.match(RobotDSLParser.ID)
            self.state = 158
            self.match(RobotDSLParser.LBRACE)
            self.state = 159
            self.stateBody()
            self.state = 160
            self.match(RobotDSLParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def enterBlock(self):
            return self.getTypedRuleContext(RobotDSLParser.EnterBlockContext,0)


        def updateBlock(self):
            return self.getTypedRuleContext(RobotDSLParser.UpdateBlockContext,0)


        def exitBlock(self):
            return self.getTypedRuleContext(RobotDSLParser.ExitBlockContext,0)


        def getRuleIndex(self):
            return RobotDSLParser.RULE_stateBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStateBody" ):
                listener.enterStateBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStateBody" ):
                listener.exitStateBody(self)
